<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/person_name" />

                <EditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:id="@+id/etNameDetail"
                    android:hint="@string/person_name"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company" />

                <EditText
                    android:layout_width="200dp"
                    android:layout_height="42dp"
                    android:hint="@string/company"
                    android:textSize="20dp"
                    android:id="@+id/etCompany" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone" />

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/home_phone"
                android:textSize="15dp"
                android:id="@+id/etPhone" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:layout_margin="15dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address" />

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/addr1"
                android:textSize="15dp"
                android:id="@+id/etAddr1" />

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/addr2"
                android:textSize="15dp"
                android:id="@+id/etAddr2" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work"
            android:layout_margin="15dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textSize="15dp"
                android:id="@+id/etEmail" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work"
            android:layout_margin="15dp" />

    </LinearLayout>

    <Button
        android:id="@+id/bEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:textSize="20dp"
        android:layout_margin="15dp"
        />
</LinearLayout>